load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "flags",
    srcs = [
        "stout/flags.cc",
    ],
    hdrs = [
        "stout/flags.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//stout/v1:flag",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)
