proto_library(
    name = "flag_proto",
    srcs = [":flag.proto"],
    deps = [
        # Well known protos should be included as deps in the
        # proto_library rules of the source files importing them.
        # A list of all @com_google_protobuf well known protos can
        # seen with:
        # `bazel query 'kind(proto_library, @com_google_protobuf//:all)'`
        "@com_google_protobuf//:descriptor_proto",
    ],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "flag",
    deps = [":flag_proto"],
    visibility = ["//visibility:public"],
)